@@ -8,30 +8,26 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.CaseUsers;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.RemoveUserRolesRequest;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseDetails;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class RemoveUserRolesRequestMapper {
     public RemoveUserRolesRequest mapToRemoveUserRolesRequest(CaseDetails caseDetails, String userId, String caseRole) {
-        return RemoveUserRolesRequest
-            .builder()
-            .case_users(
-                Arrays.asList(CaseUsers.builder()
-                    .caseId(caseDetails.getId().toString())
-                    .userId(userId)
-                    .caseRole(caseRole)
-                    .build()))
-            .build();
+        return mapToRemoveUserRolesRequest(String.valueOf(caseDetails.getId()), userId, caseRole);
     }
 
     public RemoveUserRolesRequest mapToRemoveUserRolesRequest(FinremCaseDetails caseDetails, String userId, String caseRole) {
+        return mapToRemoveUserRolesRequest(String.valueOf(caseDetails.getId()), userId, caseRole);
+    }
+
+    public RemoveUserRolesRequest mapToRemoveUserRolesRequest(String caseId, String userId, String caseRole) {
         return RemoveUserRolesRequest
             .builder()
             .case_users(
-                Arrays.asList(CaseUsers.builder()
-                    .caseId(caseDetails.getId().toString())
+                List.of(CaseUsers.builder()
+                    .caseId(caseId)
                     .userId(userId)
                     .caseRole(caseRole)
                     .build()))
